--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -6,6 +6,6 @@
   <form method="post">
     {% csrf_token %}
     <button type="submit" class="btn btn-danger">Yes, delete</button>
-    <a href="{% url 'post_detail' post.pk %}" class="btn btn-secondary">Cancel</a>
+    <a href="{% url 'post_detail' post.slug %}" class="btn btn-secondary">Cancel</a>
   </form>
 {% endblock %}
