--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -4,7 +4,7 @@
   <form method="post">
       {% csrf_token %}
       {{ form.as_p }}
-      <button type="submit">Save</button>
+      <button type="submit" class="btn btn-primary">Save</button>
   </form>
-  <a href="{% url 'post_list' %}">Cancel</a>
+  <a href="{% url 'post_list' %}" class="btn btn-secondary">Cancel</a>
 {% endblock %}
