--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,7 +4,7 @@
   {% for post in posts %}
     <div class="card mb-3">
       <div class="card-body">
-        <h3><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></h3>
+        <h3><a href="{% url 'post_detail' post.slug %}">{{ post.title }}</a></h3>
         <p>{{ post.content|truncatechars:200 }}</p>
         <small>By {{ post.author }} on {{ post.created_on }}</small>
       </div>
