--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,7 +4,9 @@
   <p>{{ post.content }}</p>
   <p><small>By {{ post.author }} on {{ post.created_on }}</small></p>
 
+  {% if request.user == post.author %}
   <a href="{% url 'post_update' post.slug %}" class="btn btn-warning btn-sm">Edit</a>
   <a href="{% url 'post_delete' post.slug %}" class="btn btn-danger btn-sm">Delete</a>
+{% endif %}
   <a href="{% url 'post_list' %}" class="btn btn-secondary btn-sm">Back</a>
 {% endblock %}
