--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,10 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
   <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
       <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'post_list' %}">Microblogify</a>
         <div class="collapse navbar-collapse">
@@ -41,7 +39,17 @@
         </div>
       </div>
     </nav>
-    
+    {% if messages %}
+  <!-- new post success message -->
+  <div class="container mt-3">
+    {% for message in messages %}
+      <div class="alert alert-success alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+    {% endfor %}
+  </div>
+{% endif %}
     </div>
   </div>
 </nav>
