--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -16,6 +16,7 @@
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav ms-auto">
             {% if user.is_authenticated %}
+            <a class="nav-link" href="{% url 'profile' %}">My Profile</a>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'post_create' %}">New Post</a>
               </li>
