--- a/blog/templates/blog/profile.html
+++ b/blog/templates/blog/profile.html
@@ -5,7 +5,7 @@
   <p>Email: {{ user.email }}</p>
 
   <hr>
-  <h4>Meine Beiträge</h4>
+  <h4>My Posts</h4>
   {% for post in posts %}
     <div class="card mb-3">
       <div class="card-body">
@@ -15,7 +15,7 @@
       </div>
     </div>
   {% empty %}
-    <p>Du hast noch keine Beiträge erstellt.</p>
+    <p>You have no Posts created.</p>
   {% endfor %}
 </div>
 {% endblock %}
