--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -1,7 +1,7 @@
 {% extends 'blog/base.html' %}
 {% block content %}
   <h2>{% if form.instance.pk %}Edit Post{% else %}Create New Post{% endif %}</h2>
-  <form method="post">
+  <form method="post" enctype="multipart/form-data">
       {% csrf_token %}
       {{ form.as_p }}
       <button type="submit" class="btn btn-primary">Save</button>
