--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,19 +4,17 @@
 {% block content %}
   <h2>{{ post.title }}</h2>
   
-  {% if "placeholder" in post.featured_image.url %}
-        <img class="card-img-top" src="{% static 'images/default.jpg' %}"
-           alt="placeholder image">
-        {% else %}
-        <img class="card-img-top" src=" {{ post.featured_image.url }}" alt="{{ post.title }}">
-        {% endif %}
+  {% if post.image %}
+    <img src="{{ post.image.url }}" alt="{{ post.title }}" style="max-width: 100%; height: auto;">
+  {% endif %}
 
-<p>{{ post.content }}</p>
+  <p>{{ post.content }}</p>
   <p><small>By {{ post.author }} on {{ post.created_on }}</small></p>
 
   {% if request.user == post.author %}
-  <a href="{% url 'post_update' post.slug %}" class="btn btn-warning btn-sm">Edit</a>
-  <a href="{% url 'post_delete' post.slug %}" class="btn btn-danger btn-sm">Delete</a>
-{% endif %}
+    <a href="{% url 'post_update' post.slug %}" class="btn btn-warning btn-sm">Edit</a>
+    <a href="{% url 'post_delete' post.slug %}" class="btn btn-danger btn-sm">Delete</a>
+  {% endif %}
+  
   <a href="{% url 'post_list' %}" class="btn btn-secondary btn-sm">Back</a>
 {% endblock %}
