--- a/blog/templates/blog/profile.html
+++ b/blog/templates/blog/profile.html
@@ -1,24 +1,29 @@
 {% extends 'blog/base.html' %}
 {% block content %}
 <div class="container mt-5">
-  <h2>{{ user.username }}'s Profile</h2>
+  <h2 class="mb-3">{{ user.username }}'s Profile</h2>
   <p>Email: {{ user.email }}</p>
 
   <hr>
-  <h4>My Posts</h4>
-  {% for post in posts %}
-    <div class="card mb-3">
-      <div class="card-body">
-        {% if post.image %}
-        <img src="{{ post.image.url }}" alt="{{ post.title }}" style="max-width: 100%; height: auto;">
-      {% endif %}
-        <h5 class="card-title">{{ post.title }}</h5>
-        <p class="card-text">{{ post.content|truncatewords:25 }}</p>
-        <a href="{% url 'post_detail' post.slug %}" class="btn btn-sm btn-primary">See Post</a>
+  <h4 class="mb-4">My Posts</h4>
+  
+  <div class="row">
+    {% for post in posts %}
+      <div class="col-md-4 mb-4">
+        <div class="card h-100 shadow-sm">
+          {% if post.image %}
+            <img src="{{ post.image.url }}" class="card-img-top" alt="{{ post.title }}">
+          {% endif %}
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">{{ post.title }}</h5>
+            <p class="card-text">{{ post.content|truncatewords:25 }}</p>
+            <a href="{% url 'post_detail' post.slug %}" class="btn btn-sm btn-primary mt-auto">See Post</a>
+          </div>
+        </div>
       </div>
-    </div>
-  {% empty %}
-    <p>You have no Posts created.</p>
-  {% endfor %}
+    {% empty %}
+      <p>You have no posts created.</p>
+    {% endfor %}
+  </div>
 </div>
 {% endblock %}
