--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -1,10 +1,33 @@
 {% extends 'blog/base.html' %}
+{% load widget_tweaks %}
+
 {% block content %}
-  <h2>{% if form.instance.pk %}Edit Post{% else %}Create New Post{% endif %}</h2>
-  <form method="post" enctype="multipart/form-data">
+<div class="row justify-content-center">
+  <div class="col-md-6">
+    <h2 class="mb-4 text-center">
+      {% if form.instance.pk %}Edit Post{% else %}Create New Post{% endif %}
+    </h2>
+
+    <form method="post" enctype="multipart/form-data">
       {% csrf_token %}
-      {{ form.as_p }}
+      <div class="mb-3">
+        <label for="id_title" class="form-label">Title</label>
+        {{ form.title|add_class:"form-control" }}
+      </div>
+
+      <div class="mb-3">
+        <label for="id_content" class="form-label">Content</label>
+        {{ form.content|add_class:"form-control" }}
+      </div>
+
+      <div class="mb-3">
+        <label for="id_image" class="form-label">Image</label>
+        {{ form.image|add_class:"form-control" }}
+      </div>
+
       <button type="submit" class="btn btn-primary">Save</button>
-  </form>
-  <a href="{% url 'post_list' %}" class="btn btn-secondary">Cancel</a>
+      <a href="{% url 'post_list' %}" class="btn btn-secondary ms-2">Cancel</a>
+    </form>
+  </div>
+</div>
 {% endblock %}
