--- a/blog/templates/account/signup.html
+++ b/blog/templates/account/signup.html
@@ -2,12 +2,16 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container mt-5">
-  <h2>Sign Up</h2>
-  <form method="post" class="mt-3">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <button type="submit" class="btn btn-success">Create Account</button>
-  </form>
+<div class="row justify-content-center mt-5">
+  <div class="col-md-6">
+    <h2 class="mb-4 text-center">Sign Up</h2>
+    <form method="post">
+      {% csrf_token %}
+      {{ form|crispy }}
+      <div class="d-grid">
+        <button type="submit" class="btn btn-success">Create Account</button>
+      </div>
+    </form>
+  </div>
 </div>
 {% endblock %}
