--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -7,9 +7,11 @@
 
     <!-- Bootstrap 5 via CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+<body class="d-flex flex-column min-vh-100">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
   <div class="container-fluid d-flex justify-content-between align-items-center">
     <!-- Logo -->
     <a class="navbar-brand" href="{% url 'post_list' %}">Microblogify</a>
@@ -61,12 +63,41 @@
   </div>
 {% endif %}
 
-<div class="container">
-    {% block content %}
-    {% endblock %}
-</div>
+<main class="flex-fill">
+  <div class="container pb-5">
+      {% block content %}
+      {% endblock %}
+  </div>
+</main>
 
 <!-- Bootstrap JS  -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+<footer class="bg-dark text-white mt-5 py-3">
+  <div class="container text-center">
+    <p class="mb-1">
+      {% block copyright %}
+        Made by <a href="https://github.com/RazmikMovsisyan" target="_blank" class="text-white text-decoration-underline">Razmik Movsisyan</a>
+      {% endblock %}
+    </p>
+    <p class="mb-0">
+      Follow us:
+      <a href="https://facebook.com" target="_blank" class="text-white text-decoration-none ms-2">
+        <i class="fab fa-facebook-square fa-lg"></i>
+      </a>
+      <a href="https://twitter.com" target="_blank" class="text-white text-decoration-none ms-2">
+        <i class="fab fa-twitter-square fa-lg"></i>
+      </a>
+      <a href="https://instagram.com" target="_blank" class="text-white text-decoration-none ms-2">
+        <i class="fab fa-instagram-square fa-lg"></i>
+      </a>
+      <a href="https://youtube.com" target="_blank" class="text-white text-decoration-none ms-2">
+        <i class="fab fa-youtube-square fa-lg"></i>
+      </a>
+    </p>
+  </div>
+</footer>
+
+
 </body>
 </html>
