--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,19 +2,22 @@
 {% load static %}
 
 {% block content %}
-  <h2>{{ post.title }}</h2>
-  
-  {% if post.image %}
-    <img src="{{ post.image.url }}" alt="{{ post.title }}" style="max-width: 100%; height: auto;">
-  {% endif %}
+<div class="row justify-content-center mt-5">
+  <div class="col-md-8">
+    <h2 class="mb-4 text-center">{{ post.title }}</h2>
 
-  <p>{{ post.content }}</p>
-  <p><small>By {{ post.author }} on {{ post.created_on }}</small></p>
+    {% if post.image %}
+      <img src="{{ post.image.url }}" alt="{{ post.title }}" class="img-fluid rounded mb-4 d-block mx-auto">
+    {% endif %}
 
-  {% if request.user == post.author %}
-    <a href="{% url 'post_update' post.slug %}" class="btn btn-warning btn-sm">Edit</a>
-    <a href="{% url 'post_delete' post.slug %}" class="btn btn-danger btn-sm">Delete</a>
-  {% endif %}
-  
-  <a href="{% url 'post_list' %}" class="btn btn-secondary btn-sm">Back</a>
+    <p>{{ post.content }}</p>
+    <p class="text-muted"><small>By {{ post.author }} on {{ post.created_on }}</small></p>
+
+    {% if request.user == post.author %}
+      <a href="{% url 'post_update' post.slug %}" class="btn btn-warning btn-sm">Edit</a>
+      <a href="{% url 'post_delete' post.slug %}" class="btn btn-danger btn-sm">Delete</a>
+    {% endif %}
+    <a href="{% url 'post_list' %}" class="btn btn-secondary btn-sm">Back</a>
+  </div>
+</div>
 {% endblock %}
