--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -11,7 +11,7 @@
     {% endif %}
 
     <p>{{ post.content }}</p>
-    <p class="text-muted"><small>By {{ post.author }} on {{ post.created_on }}</small></p>
+    <p>by <a href="{% url 'profile' post.author.username %}">{{ post.author.username }}</a></p>
 
     {% if request.user == post.author %}
       <a href="{% url 'post_update' post.slug %}" class="btn btn-warning btn-sm">Edit</a>
