--- a/blog/templates/blog/profile.html
+++ b/blog/templates/blog/profile.html
@@ -1,11 +1,10 @@
 {% extends 'blog/base.html' %}
 {% block content %}
 <div class="container mt-5">
-  <h2 class="mb-3">{{ user.username }}'s Profile</h2>
-  <p>Email: {{ user.email }}</p>
+  <h2 class="mb-3">{{ profile_user.username }}'s Profile</h2>
 
   <hr>
-  <h4 class="mb-4">My Posts</h4>
+  <h4 class="mb-4">Posts by {{ profile_user.username }}</h4>
   
   <div class="row">
     {% for post in posts %}
@@ -22,7 +21,7 @@
         </div>
       </div>
     {% empty %}
-      <p>You have no posts created.</p>
+      <p>No posts by this user yet.</p>
     {% endfor %}
   </div>
 </div>
