--- a/blog/templates/blog/profile.html
+++ b/blog/templates/blog/profile.html
@@ -4,7 +4,7 @@
   <h2 class="mb-3">{{ profile_user.username }}'s Profile</h2>
 
   <hr>
-  <h4 class="mb-4">Posts by {{ profile_user.username }}</h4>
+  <h4 class="mb-4">Posts</h4>
   
   <div class="row">
     {% for post in posts %}
