--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -25,11 +25,11 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
         {% if user.is_authenticated %}
-          <li class="nav-item">
-            <span class="navbar-text me-3">
-              Logged in as {{ user.username }}
-            </span>
-          </li>
+        <li class="nav-item d-flex align-items-center">
+          <span class="nav-link disabled">
+            Welcome back {{ user.username }}!
+          </span>
+        </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'post_create' %}">New Post</a>
           </li>
