--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -10,7 +10,7 @@
       <img src="{{ post.image.url }}" alt="{{ post.title }}" class="img-fluid rounded mb-4 d-block mx-auto">
     {% endif %}
     <p>by <a href="{% url 'profile' post.author.username %}">{{ post.author.username }}</a></p>
-    <p>{{ post.content }}</p>
+    <p class="justify-text">{{ post.content }}</p>
 
     {% if request.user == post.author %}
       <a href="{% url 'post_update' post.slug %}" class="btn btn-warning btn-sm">Edit</a>
