--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -14,7 +14,7 @@
             <h5 class="card-title">
               <a href="{% url 'post_detail' post.slug %}" class="text-decoration-none">{{ post.title }}</a>
             </h5>
-            <p class="card-text">{{ post.content|truncatechars:150 }}</p>
+            <p class="card-text text-muted justify-text">{{ post.content|truncatechars:150 }}</p>
             <p>by <a href="{% url 'profile' post.author.username %}">{{ post.author.username }}</a></p>
           </div>
         </div>
