--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,7 +10,8 @@
     <!-- Bootstrap 5 via CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <!--  CSS -->
@@ -21,7 +22,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
   <div class="container-fluid d-flex justify-content-between align-items-center">
     <!-- Logo -->
-    <a class="navbar-brand fs-3" href="{% url 'post_list' %}">MicroBlogify</a>
+    <a class="navbar-brand ms-5 fs-3" href="{% url 'post_list' %}">MicroBlogify</a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,20 +39,30 @@
           </span>
         </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'post_create' %}">New Post</a>
+            <a class="nav-link" href="{% url 'post_create' %}">
+              <i class="bi bi-plus-square me-1"></i> New Post
+            </a>            
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'profile' %}">My Profile</a>
+            <a class="nav-link" href="{% url 'profile' %}">
+              <i class="bi bi-person me-1"></i> My Profile
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+            <a class="nav-link me-5" href="{% url 'account_logout' %}">
+              <i class="bi bi-box-arrow-left me-1"></i> Logout
+            </a>           
           </li>
         {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+            <a class="nav-link" href="{% url 'account_login' %}">
+              <i class="bi bi-box-arrow-in-right me-1"></i> Login
+            </a>            
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
+            <a class="nav-link" href="{% url 'account_signup' %}">
+              <i class="bi bi-person-add me-1"></i> Sign Up
+            </a>                     
           </li>
         {% endif %}
       </ul>
