--- a/blog/templates/blog/profile.html
+++ b/blog/templates/blog/profile.html
@@ -1,7 +1,7 @@
 {% extends 'blog/base.html' %}
 {% block content %}
 <div class="container mt-5">
-  <h2 class="mb-3">{{ profile_user.username }}'s Profile</h2>
+  <h2 class="mb-3"><i class="bi bi-person"></i> {{ profile_user.username }}'s Profile</h2>
 
   <hr>
   <h4 class="mb-4">Posts</h4>
