--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -22,7 +22,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
   <div class="container-fluid d-flex justify-content-between align-items-center">
     <!-- Logo -->
-    <a class="navbar-brand ms-5 fs-3" href="{% url 'post_list' %}">MicroBlogify</a>
+    <a class="navbar-brand ms-0 ms-md-5 fs-3" href="{% url 'post_list' %}">MicroBlogify</a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
