--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -93,12 +93,12 @@
 
 <footer class="bg-dark text-white mt-5 py-3">
   <div class="container text-center">
-    <p class="mb-1">
-      {% block copyright %}
-        Made by <a href="https://github.com/RazmikMovsisyan" target="_blank" class="text-white text-decoration-underline">Razmik Movsisyan</a>
-      {% endblock %}
-    </p>
-    <p class="mb-0">
+
+    <!-- Copyright -->
+    <p class="mb-1 fw-light">Copyright 2025</p>
+
+    <!-- Social media links -->
+    <p class="mb-2">
       Follow us:
       <a href="https://facebook.com" target="_blank" class="text-white text-decoration-none ms-2">
         <i class="fab fa-facebook-square fa-lg"></i>
@@ -113,8 +113,17 @@
         <i class="fab fa-youtube-square fa-lg"></i>
       </a>
     </p>
+
+    <!-- Author -->
+    <p class="mb-0 small">
+      {% block copyright %}
+        Made by <a href="https://github.com/RazmikMovsisyan" target="_blank" class="text-white text-decoration-underline">Razmik Movsisyan</a>
+      {% endblock %}
+    </p>
+
   </div>
 </footer>
+
 
 
 </body>
