Style Mobile View Padding L+R

--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -41,7 +41,7 @@
     </div>
 
     <!-- for smaller devices no card background -->
-    <div class="d-block d-md-none">
+    <div class="d-block d-md-none px-3">
       <h2 class="text-center mb-4">
         {% if form.instance.pk %}Edit Post{% else %}Create New Post{% endif %}
       </h2>
