--- a/blog/templates/blog/profile.html
+++ b/blog/templates/blog/profile.html
@@ -1,10 +1,10 @@
 {% extends 'blog/base.html' %}
 {% block content %}
-<div class="container mt-5">
-  <h2 class="mb-3"><i class="bi bi-person"></i> {{ profile_user.username }}'s Profile</h2>
+<div class="container mt-1">
+  <h2 class="mb-2"><i class="bi bi-person"></i> {{ profile_user.username }}'s Profile</h2>
 
   <hr>
-  <h4 class="mb-4">Posts</h4>
+  <h4 class="mb-2">Posts</h4>
   
   <div class="row">
     {% for post in posts %}
@@ -16,9 +16,11 @@
           </a>
         {% endif %}
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title">{{ post.title }}</h5>
-            <p class="card-text">{{ post.content|truncatewords:25 }}</p>
-            <a href="{% url 'post_detail' post.slug %}" class="btn btn-sm btn-primary mt-auto">See Post</a>
+            <h5 class="card-title">
+              <a href="{% url 'post_detail' post.slug %}" class="text-decoration-none">{{ post.title }}</a>
+            </h5>
+            <p class="card-text justify-text">{{ post.content|truncatewords:70 }}</p>
+            <a href="{% url 'post_detail' post.slug %}" class="btn btn-sm btn btn-dark px-4 py-2 mt-auto">See Post</a>
           </div>
         </div>
       </div>
