--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,9 +1,9 @@
 {% extends 'blog/base.html' %}
 {% block content %}
-  <h2 class="mb-4 text-center">Explore the Posts of our Community!</h2>
-  <div class="row">
+  <div class="row mt-2 px-3">
+    <h2 class="mb-4 text-center">Explore the Posts of our Community!</h2>
     {% for post in posts %}
-      <div class="col-md-3 mb-2 px-3">
+      <div class="col-md-3 mb-4 px-3">
         <div class="card h-100 shadow-sm">
           {% if post.image %}
           <a href="{% url 'post_detail' post.slug %}">
