--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -9,8 +9,12 @@
     {% if post.image %}
       <img src="{{ post.image.url }}" alt="{{ post.title }}" class="img-fluid rounded mb-4 d-block mx-auto">
     {% endif %}
-    <p>by <a href="{% url 'profile' post.author.username %}">{{ post.author.username }}</a></p>
-    <p class="justify-text">{{ post.content }}</p>
+    <p>
+      by <a href="{% url 'profile' post.author.username %}">{{ post.author.username }}</a>, 
+      created on: {{ post.created_on|date:"d.m.Y H:i" }}
+    </p>
+    
+    <div class="justify-text">{{ post.content|linebreaks }}</div>
 
     {% if request.user == post.author %}
       <a href="{% url 'post_update' post.slug %}" class="btn btn-warning btn-sm">Edit</a>
