--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -11,11 +11,11 @@
           </a>
         {% endif %}
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title">
+            <h5 class="card-title text-center">
               <a href="{% url 'post_detail' post.slug %}" class="text-decoration-none">{{ post.title }}</a>
             </h5>
-            <p class="card-text text-muted justify-text">{{ post.content|truncatechars:150 }}</p>
-            <p>by <a href="{% url 'profile' post.author.username %}">{{ post.author.username }}</a></p>
+            <p class="card-text text-muted text-center justify-content-center">{{ post.content|truncatechars:150 }}</p>
+            <p class="text-center">by <a href="{% url 'profile' post.author.username %}">{{ post.author.username }}</a></p>
           </div>
         </div>
       </div>
