--- a/blog/templates/blog/profile.html
+++ b/blog/templates/blog/profile.html
@@ -4,7 +4,7 @@
   <h2 class="mb-2"><i class="bi bi-person"></i> {{ profile_user.username }}'s Profile</h2>
 
   <hr>
-  <h4 class="mb-2">Posts</h4>
+  <h4 class="mb-3"><i class="bi bi-book me-2"></i>Posts</h4>
   
   <div class="row">
     {% for post in posts %}
