--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -91,7 +91,7 @@
 <!-- Bootstrap JS  -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-<footer class="bg-dark text-white mt-5 py-3">
+<footer class="bg-dark text-secondary mt-5 py-3">
   <div class="container text-center">
 
     <!-- Copyright -->
@@ -117,7 +117,7 @@
     <!-- Author -->
     <p class="mb-0 small">
       {% block copyright %}
-        Made by <a href="https://github.com/RazmikMovsisyan" target="_blank" class="text-white text-decoration-underline">Razmik Movsisyan</a>
+        Made by <a href="https://github.com/RazmikMovsisyan" target="_blank" class="text-decoration-underline text-secondary">Razmik Movsisyan</a>
       {% endblock %}
     </p>
 
