--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -11,7 +11,7 @@
     {% endif %}
     <p>
       by <a href="{% url 'profile' post.author.username %}">{{ post.author.username }}</a>, 
-      created on: {{ post.created_on|date:"d.m.Y H:i" }}
+      created on: {{ post.created_on|date:"d.m.Y" }}
     </p>
     
     <div class="justify-text">{{ post.content|linebreaks }}</div>
