--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -82,7 +82,7 @@
     {% if user.is_authenticated %}
       <div class="row justify-content-center mt-5">
         <div class="col-md-12">
-          <h5 class="mb-3 text-center">Add a Comment</h5>
+          <h5 class="mb-3">Add a Comment</h5>
           <form method="post">
             {% csrf_token %}
             <div class="mb-3">
