Style Add Comment Button

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -89,7 +89,7 @@
               {{ comment_form.content|add_class:"form-control" }}
             </div>
             <div class="d-grid">
-              <button type="submit" class="btn btn-primary">Add Comment</button>
+              <button type="submit" class="btn btn-dark">Add Comment</button>
             </div>
           </form>
         </div>
