--- a/blog/templates/account/login.html
+++ b/blog/templates/account/login.html
@@ -12,6 +12,7 @@
         <button type="submit" class="btn btn-primary">Login</button>
       </div>
     </form>
+    <p class="text-center mt-5">Don’t have an account? <a href="{% url 'account_signup' %}">Sign up</a>.</p>
   </div>
 </div>
 {% endblock %}
