--- a/blog/templates/account/signup.html
+++ b/blog/templates/account/signup.html
@@ -12,6 +12,7 @@
         <button type="submit" class="btn btn-success">Create Account</button>
       </div>
     </form>
+    <p class="text-center mt-5">You already have an account? <a href="{% url 'account_login' %}">Log in</a>.</p>
   </div>
 </div>
 {% endblock %}
