--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block content %}
-<div class="row justify-content-center mt-2 px-3">
+<div class="row container justify-content-center mt-2 px-3">
   <div class="col-md-8">
     <h2 class="mb-4 text-center">{{ post.title }}</h2>
 
@@ -11,12 +11,13 @@
       <img src="{{ post.image.url }}" alt="{{ post.title }}" class="img-fluid rounded mb-4 d-block mx-auto">
     {% endif %}
     <p>
+      <hr>
       by <a href="{% url 'profile' post.author.username %}">{{ post.author.username }}</a>, 
       created on: {{ post.created_on|date:"d.m.Y" }}
     </p>
     
     <div class="justify-text">{{ post.content|linebreaks }}</div>
-
+    <hr>
     {% if request.user == post.author %}
       <a href="{% url 'post_update' post.slug %}" class="btn btn-warning btn-sm">Edit</a>
       <a href="{% url 'post_delete' post.slug %}" class="btn btn-danger btn-sm">Delete</a>
@@ -24,7 +25,7 @@
     <a href="{% url 'post_list' %}" class="btn btn-secondary btn-sm">Back</a>
   </div>
 </div>
-<hr>
+
 <div class="row justify-content-center mt-5 px-3">
   <div class="col-md-8">
     <h4 class="mb-4">Comments</h4>
