--- a/blog/templates/blog/profile.html
+++ b/blog/templates/blog/profile.html
@@ -9,7 +9,7 @@
   <div class="row">
     {% for post in posts %}
       <div class="col-md-4 mb-4">
-        <div class="card h-100 shadow-sm">
+        <div class="card h-100 shadow">
           {% if post.image %}
           <a href="{% url 'post_detail' post.slug %}">
             <img src="{{ post.image.url }}" class="card-img-top" alt="{{ post.title }}">
