--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -24,3 +24,17 @@
   .justify-text {
     text-align: justify;
   }
+
+  /* Image hover effect */
+  .inner {
+    overflow: hidden;
+
+  }
+
+  .inner img {
+    transition: all 3s ease;
+  }
+
+  .inner:hover img {
+    transform: scale(1.3);
+  }
