--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,11 +5,13 @@
 
     {% for post in posts %}
       <div class="container col-md-3 mb-4 px-3">
-        <div class="card h-100 shadow-sm">
+        <div class="card h-100 shadow">
           {% if post.image %}
-          <a href="{% url 'post_detail' post.slug %}">
-            <img src="{{ post.image.url }}" class="card-img-top" alt="{{ post.title }}">
-          </a>
+          <div class="inner">
+            <a href="{% url 'post_detail' post.slug %}">
+              <img src="{{ post.image.url }}" class="card-img-top" alt="{{ post.title }}">
+            </a>
+          </div>
         {% endif %}
           <div class="card-body d-flex flex-column">
             <h5 class="card-title text-center">
