--- a/blog/templates/account/signup.html
+++ b/blog/templates/account/signup.html
@@ -9,7 +9,7 @@
       {% csrf_token %}
       {{ form|crispy }}
       <div class="d-grid">
-        <button type="submit" class="btn btn-success">Create Account</button>
+        <button type="submit" class="btn btn-dark">Create Account</button>
       </div>
     </form>
     <p class="text-center mt-5">You already have an account? <a href="{% url 'account_login' %}">Log in</a>.</p>
