--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -28,7 +28,7 @@
                        style="max-width: auto; height: auto;">
                   <div class="form-check d-inline-block">
                     <input class="form-check-input" type="checkbox" name="image-clear" id="image-clear_id">
-                    <label class="form-check-label" for="image-clear_id">Chieck this box to delete image</label>
+                    <label class="form-check-label" for="image-clear_id">Check this box to delete the image or simply upload a new one</label>
                   </div>
                 </div>
               {% endif %}
@@ -39,7 +39,7 @@
             
 
             <div class="d-grid gap-2 d-md-flex">
-              <button type="submit" class="btn btn-primary">Save</button>
+              <button type="submit" class="btn btn-dark">Save</button>
               <a href="{% url 'post_list' %}" class="btn btn-secondary ms-2">Cancel</a>
             </div>
           </form>
@@ -66,7 +66,7 @@
                    class="img-fluid d-block mx-auto mb-2">
               <div class="form-check d-inline-block">
                 <input class="form-check-input" type="checkbox" name="image-clear" id="image-clear_id">
-                <label class="form-check-label" for="image-clear_id">Chieck this box to delete image</label>
+                <label class="form-check-label" for="image-clear_id">Check this box to delete the image or simply upload a new one</label>
               </div>
             </div>
           {% endif %}
@@ -76,7 +76,7 @@
         </div>
 
         <div class="d-grid gap-2">
-          <button type="submit" class="btn btn-primary">Save</button>
+          <button type="submit" class="btn btn-dark">Save</button>
           <a href="{% url 'post_list' %}" class="btn btn-secondary">Cancel</a>
         </div>
       </form>
