--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -38,3 +38,26 @@
   .inner:hover img {
     transform: scale(1.3);
   }
+
+  /* set hero baner and removed margin on h2 */
+  .hero-banner {
+    background: linear-gradient(45deg, hsla(168, 85%, 52%, 0.5), hsla(263, 88%, 45%, 0.5));
+    height: 200px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    flex-direction: row;
+    color: white;
+    border-radius: 1rem;
+    transition: filter 1s ease-in-out;
+    justify-content: center;
+    padding: 1.5rem;
+}
+  
+  .hero-banner:hover {
+    filter: hue-rotate(100deg);
+  }  
+
+  .hero-banner h2, p{
+    margin: 0;
+  }
