--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -36,9 +36,8 @@
               <!-- Upload Image -->
               <input type="file" name="image" class="form-control" id="id_image">
             </div>
-            
 
-            <div class="d-grid gap-2 d-md-flex">
+            <div class="d-grid gap-2 d-md-flex mt-4">
               <button type="submit" class="btn btn-dark">Save</button>
               <a href="{% url 'post_list' %}" class="btn btn-secondary ms-2">Cancel</a>
             </div>
