--- a/blog/templates/account/signup.html
+++ b/blog/templates/account/signup.html
@@ -4,15 +4,20 @@
 {% block content %}
 <div class="row justify-content-center mt-5">
   <div class="col-md-6">
-    <h2 class="mb-4 text-center">Sign Up</h2>
-    <form method="post">
+    <h2 class="mb-4 text-center" aria-label="Sign up form for new users">Sign Up</h2>
+
+    <form method="post" aria-label="Sign up form">
       {% csrf_token %}
       {{ form|crispy }}
       <div class="d-grid">
-        <button type="submit" class="btn btn-dark">Create Account</button>
+        <button type="submit" class="btn btn-dark" aria-label="Create new account">Create Account</button>
       </div>
     </form>
-    <p class="text-center mt-5">You already have an account? <a href="{% url 'account_login' %}">Log in</a>.</p>
+
+    <p class="text-center mt-5">
+      You already have an account? 
+      <a href="{% url 'account_login' %}" aria-label="Go to login page">Log in</a>.
+    </p>
   </div>
 </div>
 {% endblock %}
