--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,118 +14,126 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <!--  CSS -->
+    
+    <!-- CSS -->
     <link rel="stylesheet" href="{% static '/css/style.css' %}">
-
 </head>
+
 <body class="d-flex flex-column min-vh-100">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-  <div class="container-fluid d-flex justify-content-between align-items-center">
-    <!-- Logo -->
-    <a class="navbar-brand ms-0 ms-md-5 fs-3" href="{% url 'post_list' %}">MicroBlogify</a>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <!-- Nav with ARIA label -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4" role="navigation" aria-label="Main Navigation">
+    <div class="container-fluid d-flex justify-content-between align-items-center">
 
-    <!-- Navigation -->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto">
-        {% if user.is_authenticated %}
-        <li class="nav-item d-flex align-items-center">
-          <span class="nav-link disabled">
-            Welcome back {{ user.username }}!
-          </span>
-        </li>
+      <!-- Logo -->
+      <a class="navbar-brand ms-0 ms-md-5 fs-3" href="{% url 'post_list' %}">MicroBlogify</a>
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto">
+          {% if user.is_authenticated %}
+          <li class="nav-item d-flex align-items-center">
+            <span class="nav-link disabled">
+              Welcome back {{ user.username }}!
+            </span>
+          </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'post_create' %}">
-              <i class="bi bi-plus-square me-1"></i> New Post
+            <a class="nav-link" href="{% url 'post_create' %}" aria-label="Create new post">
+              <i class="bi bi-plus-square me-1" aria-hidden="true"></i> New Post
             </a>            
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'profile' %}">
-              <i class="bi bi-person me-1"></i> My Profile
+            <a class="nav-link" href="{% url 'profile' %}" aria-label="Go to profile">
+              <i class="bi bi-person me-1" aria-hidden="true"></i> My Profile
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link me-5" href="{% url 'account_logout' %}">
-              <i class="bi bi-box-arrow-left me-1"></i> Logout
+            <a class="nav-link me-5" href="{% url 'account_logout' %}" aria-label="Log out">
+              <i class="bi bi-box-arrow-left me-1" aria-hidden="true"></i> Logout
             </a>           
           </li>
-        {% else %}
+          {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'account_login' %}">
-              <i class="bi bi-box-arrow-in-right me-1"></i> Login
+            <a class="nav-link" href="{% url 'account_login' %}" aria-label="Log in">
+              <i class="bi bi-box-arrow-in-right me-1" aria-hidden="true"></i> Login
             </a>            
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'account_signup' %}">
-              <i class="bi bi-person-add me-1"></i> Sign Up
+            <a class="nav-link" href="{% url 'account_signup' %}" aria-label="Sign up">
+              <i class="bi bi-person-add me-1" aria-hidden="true"></i> Sign Up
             </a>                     
           </li>
-        {% endif %}
-      </ul>
+          {% endif %}
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
-{% if messages %}
+  </nav>
+
+  {% if messages %}
   <!-- new post success message -->
   <div class="container mt-3">
     {% for message in messages %}
       <div class="alert alert-success alert-dismissible fade show" role="alert">
         {{ message }}
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close alert"></button>
       </div>
     {% endfor %}
   </div>
-{% endif %}
+  {% endif %}
 
-<main class="flex-fill">
-  <div class="container pb-5">
-      {% block content %}
-      {% endblock %}
-  </div>
-</main>
+  <main class="flex-fill" role="main">
+    <div class="container pb-5">
+        {% block content %}
+        {% endblock %}
+    </div>
+  </main>
 
-<!-- Bootstrap JS  -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-<footer class="bg-dark text-secondary mt-5 py-3">
-  <div class="container text-center">
+  <footer class="bg-dark text-secondary mt-5 py-3">
+    <div class="container text-center">
 
-    <!-- Copyright -->
-    <p class="mb-1 fw-light">Copyright 2025</p>
+      <!-- Copyright -->
+      <p class="mb-1 fw-light">Copyright 2025</p>
 
-    <!-- Social media links -->
-    <p class="mb-2">
-      Follow us:
-      <a href="https://facebook.com" target="_blank" class="text-white text-decoration-none ms-2">
-        <i class="fab fa-facebook-square fa-lg"></i>
-      </a>
-      <a href="https://twitter.com" target="_blank" class="text-white text-decoration-none ms-2">
-        <i class="fab fa-twitter-square fa-lg"></i>
-      </a>
-      <a href="https://instagram.com" target="_blank" class="text-white text-decoration-none ms-2">
-        <i class="fab fa-instagram-square fa-lg"></i>
-      </a>
-      <a href="https://youtube.com" target="_blank" class="text-white text-decoration-none ms-2">
-        <i class="fab fa-youtube-square fa-lg"></i>
-      </a>
-    </p>
+      <!-- Social media links -->
+      <p class="mb-2">
+        Follow us:
+        <a href="https://facebook.com" target="_blank" aria-label="Visit our Facebook page" class="text-white text-decoration-none ms-2">
+          <i class="fab fa-facebook-square fa-lg" aria-hidden="true"></i>
+        </a>
+        <a href="https://twitter.com" target="_blank" aria-label="Visit our Twitter profile" class="text-white text-decoration-none ms-2">
+          <i class="fab fa-twitter-square fa-lg" aria-hidden="true"></i>
+        </a>
+        <a href="https://instagram.com" target="_blank" aria-label="Visit our Instagram profile" class="text-white text-decoration-none ms-2">
+          <i class="fab fa-instagram-square fa-lg" aria-hidden="true"></i>
+        </a>
+        <a href="https://youtube.com" target="_blank" aria-label="Visit our YouTube channel" class="text-white text-decoration-none ms-2">
+          <i class="fab fa-youtube-square fa-lg" aria-hidden="true"></i>
+        </a>
+      </p>
 
-    <!-- Author -->
-    <p class="mb-0 small">
-      {% block copyright %}
-        Made by <a href="https://github.com/RazmikMovsisyan" target="_blank" class="text-decoration-underline text-secondary">Razmik Movsisyan</a>
-      {% endblock %}
-    </p>
+      <!-- Author -->
+      <p class="mb-0 small">
+        {% block copyright %}
+          Made by 
+          <a href="https://github.com/RazmikMovsisyan" target="_blank" 
+             class="text-decoration-underline text-secondary" 
+             aria-label="Go to developer's GitHub page">
+             Razmik Movsisyan
+          </a>
+        {% endblock %}
+      </p>
 
-  </div>
-</footer>
+    </div>
+  </footer>
 
-
-<script src="{% static 'js/javascript.js' %}"></script>
+  <script src="{% static 'js/javascript.js' %}"></script>
 
 </body>
 </html>
