--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends 'blog/base.html' %}
+<!-- {% extends 'blog/base.html' %}
 
 {% block content %}
 <div class="container mt-5">
@@ -23,4 +23,4 @@
     </div>
   </div>
 </div>
-{% endblock %}
+{% endblock %} -->
